# react-native-jni-bridge

./: App.tsx  README.md  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/java/com/reactnativejnibridge/: JniBridgeModule.kt  MainActivity.kt  MainApplication.kt  MyPackage.kt  VideoPlayerViewManager.kt
android/app/src/main/jni/: CMakeLists.txt
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/ReactNativeJniBridge/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/ReactNativeJniBridge.xcodeproj/: project.pbxproj
ios/ReactNativeJniBridge.xcodeproj/xcshareddata/xcschemes/: ReactNativeJniBridge.xcscheme
ios/ReactNativeJniBridge.xcworkspace/: contents.xcworkspacedata
src/components/: VideoPlayer.tsx
src/screens/: HomeScreen.tsx  PlayerScreen.tsx
